Resolves: tdf#108279 dimension rows are 32-bit and don't wrap at 64k

Change-Id: I7bf7a149fb1db526ef62bea2f52b200cf5053cc2
(cherry picked from commit 259c2409310814ae62c8d0aefef19a71e8d88dbe)
Reviewed-on: https://gerrit.libreoffice.org/38330
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins <ci@libreoffice.org>